src/objects/ExtendedOrder__c.object
<CustomObject>
    <fields>
        <fullName>AccessoriesWarrantyPice__c</fullName>
        <label>配件保修价格</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>有约定</fullName>
                </value>
                <value>
                    <fullName>未约定</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AccessoriesWarrantyPrice__c</fullName>
        <label>有约定配件保修价格</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AccountName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>客户名称</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>延保订单</relationshipLabel>
        <relationshipName>AccountName</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AgencyBusinessScope__c</fullName>
        <label>代理商经营范围</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>分类Ⅱ</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>公立直销</fullName>
                </value>
                <value>
                    <fullName>区域代理</fullName>
                </value>
                <value>
                    <fullName>个案代理</fullName>
                </value>
                <value>
                    <fullName>投资平台</fullName>
                </value>
                <value>
                    <fullName>单体民营</fullName>
                </value>
                <value>
                    <fullName>集团客户</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChannelDeliveryMethod__c</fullName>
        <label>渠道交付方式</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>采购订货交付</fullName>
                </value>
                <value>
                    <fullName>库存即刻交付</fullName>
                </value>
                <value>
                    <fullName>库存预留交付</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContractAmount__c</fullName>
        <label>合同金额(万)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ContractTitle__c</fullName>
        <label>合同名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerFirst__c</fullName>
        <label>客户是否首营</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EstimatedDeliveryDate__c</fullName>
        <label>预计交货日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExportDate__c</fullName>
        <label>导出日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinalCustomerName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>最终客户名称</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>延保订单 (最终客户名称)</relationshipLabel>
        <relationshipName>FinalCustomerName</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HospitalBusinessLicense__c</fullName>
        <label>医院营业执照</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>有</fullName>
                </value>
                <value>
                    <fullName>无</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HospitalPracticeApproval__c</fullName>
        <label>医院执业批准书</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>有</fullName>
                </value>
                <value>
                    <fullName>无</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OA__c</fullName>
        <label>合同已上传OA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Private__c</fullName>
        <label>公立/民营</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>公立</fullName>
                </value>
                <value>
                    <fullName>民营</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesOrganization__c</fullName>
        <label>销售组织</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Global Vision HongKong Limited</fullName>
                </value>
                <value>
                    <fullName>北京高视远望科技有限责任公司</fullName>
                </value>
                <value>
                    <fullName>上海明望医疗器械有限公司</fullName>
                </value>
                <value>
                    <fullName>上海高视医疗技术有限公司</fullName>
                </value>
                <value>
                    <fullName>宁波高视精密医疗技术有限公司</fullName>
                </value>
                <value>
                    <fullName>天津高视晶品医疗技术有限公司</fullName>
                </value>
                <value>
                    <fullName>天津高视众望科技有限公司</fullName>
                </value>
                <value>
                    <fullName>宁波高斯医疗科技有限公司</fullName>
                </value>
                <value>
                    <fullName>温州雷蒙光电科技有限公司</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salesman__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>业务员</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Salesman1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StandardAcceptanceClause1__c</fullName>
        <label>非标准验收条款</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>StandardAcceptanceClause__c</fullName>
        <label>标准验收条款</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WarrantyPeriod__c</fullName>
        <label>保修期(月）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WhetherFinancing__c</fullName>
        <label>是否融资</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WhetherToExtend__c</fullName>
        <label>是否延保</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>classification2__c</fullName>
        <label>分类Ⅲ</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>公立直销</fullName>
                </value>
                <value>
                    <fullName>区域代理</fullName>
                </value>
                <value>
                    <fullName>个案代理</fullName>
                </value>
                <value>
                    <fullName>蓝海之略</fullName>
                </value>
                <value>
                    <fullName>远程视界</fullName>
                </value>
                <value>
                    <fullName>全科医疗</fullName>
                </value>
                <value>
                    <fullName>单体民营</fullName>
                </value>
                <value>
                    <fullName>爱尔集团</fullName>
                </value>
                <value>
                    <fullName>华厦集团</fullName>
                </value>
                <value>
                    <fullName>华正集团</fullName>
                </value>
                <value>
                    <fullName>朝聚眼科</fullName>
                </value>
                <value>
                    <fullName>新视界</fullName>
                </value>
                <value>
                    <fullName>阿玛施集团</fullName>
                </value>
                <value>
                    <fullName>普瑞集团</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>classification__c</fullName>
        <label>分类I</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>直销</fullName>
                </value>
                <value>
                    <fullName>渠道</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>department__c</fullName>
        <label>部门</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>延保订单</label>
    <nameField>
        <displayFormat>YBDD-{YYYY}{MM}-{0000000}</displayFormat>
        <label>延保订单名称</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>延保订单</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>